# Upwork-AI-Agent

./: .env.example  .gitignore  AGENTS-sample.md  CLAUDE.md  HERMES-ARQUITECHTURE.md  README.md  ULYSSES-ARQUITECHTURE.md  pyproject.toml
.github/workflows/: ci.yml
hermes/: __init__.py  models.py
hermes/agents/: __init__.py  notifier.py  scorer.py  scout.py
hermes/cli/: __init__.py  main.py
hermes/config/: profile.py  profile.yaml  settings.py
hermes/graph/: __init__.py  edges.py  graph.py  nodes.py  state.py
hermes/tools/: db.py  email_reader.py  github_mapper.py  job_parser.py
scripts/: _spline.py  generate_menubar_icon.py
tests/: conftest.py  test_cli.py  test_config_profile.py  test_db.py  test_edges.py  test_email_reader.py  test_graph.py  test_launch_agent.py  test_llm.py  test_manual_job.py  test_menubar.py  test_nodes.py  test_notifier.py  test_parser.py  test_proposal.py  test_prototype.py  test_scorer.py  test_scout.py  test_settings.py
ulysses/: __init__.py  models.py
ulysses/agents/: notifier.py  proposal.py  prototype.py  scorer.py  scout.py
ulysses/app/: __init__.py  menubar.py
ulysses/cli/: __init__.py  main.py
ulysses/config/: __init__.py  profile.py  profile.yaml  settings.py
ulysses/graph/: __init__.py  edges.py  graph.py  nodes.py  state.py
ulysses/templates/proposals/: ai_integration.txt  api_dev.txt  automation.txt  data_pipeline.txt  scraping.txt
ulysses/templates/prototypes/: ai_pipeline_base.py  (+4 more)
ulysses/tools/: __init__.py  db.py  email_reader.py  github_mapper.py  job_parser.py  launch_agent.py  llm.py  manual_job.py  red_flag.py
