[project]
name = "ulysses"
version = "0.1.0"
description = "Ulysses — multi-agent AI ecosystem for monitoring, scoring, and responding to Upwork jobs."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "langgraph>=0.2.0",
    "langchain>=0.3.0",
    "langchain-core>=0.3.0",
    "langchain-openai>=0.2.0",
    "openai>=1.40.0",
    "python-telegram-bot>=21.0",
    "typer>=0.12.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "sqlmodel>=0.0.18",
    "aiosqlite>=0.20.0",
    "greenlet>=3.1.0",
    "beautifulsoup4>=4.12",
    "imaplib2>=3.6",
    "httpx>=0.27.0",
    "loguru>=0.7.2",
    "rich>=13.0",
    "pyyaml>=6.0",
    "tenacity>=9.0.0",
    "alembic>=1.13.0",
    "rumps>=0.4.0; sys_platform == 'darwin'",
]

[project.scripts]
ulysses = "ulysses.cli.main:app"

[dependency-groups]
dev = [
    "ruff>=0.6.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "pytest-mock>=3.14.0",
    "syrupy>=4.7.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["ulysses"]

[tool.ruff]
line-length = 100
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "ANN", "ASYNC", "RUF"]
ignore = ["ANN401"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["ANN001", "ANN201", "ANN202"]

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.coverage.run]
source = ["ulysses"]
